--- a/GrandeViaFitness/src/main/webapp/common/css/960.css
+++ b/GrandeViaFitness/src/main/webapp/common/css/960.css
@@ -14,6 +14,35 @@
 */
 body {
 	min-width: 960px;
+	
+	margin: 50px;
+}
+input[type=submit]{
+	font: 80.5% "Trebuchet MS", sans-serif;
+}
+input{
+	background-color: #a2b5cd;
+	border:1px #474749;
+	border-radius:3px 3px 3px 3px;
+}
+
+input:focus{
+	background-color: #BFEFFF;
+	border:1px #474749;
+	border-radius:3px 3px 3px 3px;
+}
+
+fieldset {
+	color: #3E71A8;
+	border:1px solid #3E71A8;
+}
+body.dark {
+    background-image: url("./../images/dark_wall.png");
+    padding: 25px 0 50px;
+}
+
+body, button, input, select, textarea {
+    color: #222;
 }
 
 /* `Container
