--- a/GrandeViaFitness/src/main/webapp/common/css/myCss.css
+++ b/GrandeViaFitness/src/main/webapp/common/css/myCss.css
@@ -1,26 +1,27 @@
 .SpanHorarioData {
-	color: white;
+	color: black;
 	float: right;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 0.7em;
     margin-top: 4px;
 }
 .spanTitulo{
-	color: white;
+	color: black;
 	float: left;
-	font-family: none;
-	font-size: 0.7em;	
-    margin-top: 4px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 1em;	
+	font-weight: bold;
+    margin-top: 2px;
 }
 
 .barratop {
 	clear:both;
 	background-image: url("./../images/pickAzul.png");
 	background-repeat: repeat;
-	height: 24px;
+	height: 20px;
 	text-align: -webkit-center;
 	text-align: center;
-	border-bottom: solid 3px #72806A
+	border-bottom: solid 3px #CD0404;
 }
 
 .fieldBoxPrincipal{
@@ -44,11 +45,27 @@
 	width: 430px;
 }
 
+.classcontainer{
+	min-width: 960px;
+	margin: 50px;
+}
+
+legend{
+	color: #b2d0e8;
+	font-weight: bold;
+}
+fieldset {
+	color: #b2d0e8;
+	border:1px solid #CD0404;
+	font-weight: bold;
+}
+
 body.dark {
     background-image: url("./../images/dark_wall.png");
     margin-left: 0px;
     margin-right: 0px;
     margin-top: 0px;
     min-width: 860px;
-    font-family: Arial,Helvetica,sans-serif ;
+    font: 80.5% "Arial" ,"Helvetica", sans-serif;
+  /*   font-family: Arial,Helvetica,sans-serif ; */
 }
