--- a/GrandeViaFitness/src/main/webapp/common/css/myCss.css
+++ b/GrandeViaFitness/src/main/webapp/common/css/myCss.css
@@ -1,21 +1,88 @@
+.Menu {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	height: 30px;
+}
+
+.Menu, .Menu li ul {
+	background-color:white;
+	
+}
+
+.Menu li {
+	position: relative;
+	float: left;
+	padding-right: 2px;
+	margin-bottom: 3px;
+	height: 101%;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
+}
+
+.Menu li ul li a:HOVER{
+	background-color: blue;
+}
+
+.Menu li ul {
+	position: absolute;
+	padding-left: 0px;
+	top: 0;
+	display: none;
+	list-style: none;
+	margin-top: 29px;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
+}
+
+.Menu li a {
+	display: block;
+	text-decoration: none;
+	color: #E2144A;
+	background: #fff;
+	padding: 5px;
+	border: 1px solid #ccc;
+	font-size: small;
+	width: 150px;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
+}
+
+/* Fix IE. Hide from IE Mac \*/
+* .Menu ul li {
+	float: left;
+}
+
+* .Menu ul li a {
+	height: 1%;
+}
+/* End */
+.Menu li:hover ul {
+	display: block;
+}
+
 .SpanHorarioData {
 	color: black;
 	float: right;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 0.7em;
-    margin-top: 4px;
+	margin-top: 4px;
 }
-.spanTitulo{
+
+.spanTitulo {
 	color: black;
 	float: left;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 1em;	
+	font-size: 1em;
 	font-weight: bold;
-    margin-top: 2px;
+	margin-top: 2px;
 }
 
 .barratop {
-	clear:both;
+	clear: both;
 	background-image: url("./../images/pickAzul.png");
 	background-repeat: repeat;
 	height: 20px;
@@ -24,7 +91,7 @@
 	border-bottom: solid 3px #CD0404;
 }
 
-.fieldBoxPrincipal{
+.fieldBoxPrincipal {
 	height: auto;
 	margin: auto;
 	padding: 0;
@@ -43,29 +110,41 @@
 	margin: auto;
 	padding: 0;
 	width: 430px;
+	font-weight: bold;
+	text-align: left;
 }
 
-.classcontainer{
+.margenLeft_30 {
+	margin-left: 30%;
+}
+
+.div_label {
+	width: auto;
+	height: auto;
+}
+
+.classcontainer {
 	min-width: 960px;
 	margin: 50px;
 }
 
-legend{
+legend {
 	color: #b2d0e8;
-	font-weight: bold;
-}
-fieldset {
-	color: #b2d0e8;
-	border:1px solid #CD0404;
 	font-weight: bold;
 }
 
-body.dark {
-    background-image: url("./../images/dark_wall.png");
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    min-width: 860px;
-    font: 80.5% "Arial" ,"Helvetica", sans-serif;
-  /*   font-family: Arial,Helvetica,sans-serif ; */
+fieldset {
+	color: #b2d0e8;
+	border: 1px solid #CD0404;
 }
+
+body.dark {
+	background-image: url("./../images/dark_wall.png");
+	margin-left: 0px;
+	margin-right: 0px;
+	margin-top: 0px;
+	min-width: 860px;
+	font: 76.5% "Arial", "Helvetica", sans-serif;
+	/*   font-family: Arial,Helvetica,sans-serif ; */
+}
+
