--- a/GrandeViaFitness/src/main/webapp/common/css/myCss.css
+++ b/GrandeViaFitness/src/main/webapp/common/css/myCss.css
@@ -1,3 +1,8 @@
+.LabelInputNome{
+	text-align: left;
+    float: left; 
+}
+
 .center {
 	margin: auto;
 	width: 860px;
@@ -7,6 +12,17 @@
 	text-align: center;
 	padding-top: 75px;
 	height: 249px;
+}
+
+.legenda{
+	background: none repeat scroll 0 0 transparent;
+    color: #939393;
+    font-size: 16px;
+    font-weight: bolder;
+    margin-left: -1px;
+    padding-left: 7px;
+    padding-right: 7px;
+    text-transform: uppercase;
 }
 
 .boxSombra {
@@ -25,13 +41,11 @@
 	right: 20px;
 	width: 250px;
 	border: 0px solid #666666;
-	background: #aaaaaa;
-	background: #aaaaaa linear-gradient(top, rgba(0, 0, 0, 0.25),
+	background: #2830EB;
+	background: #2830EB linear-gradient(top, rgba(0, 0, 0, 0.85),
 		rgba(0, 0, 0, 0));
-	background: #aaaaaa
-		-webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.25)),
-		to(rgba(0, 0, 0, 0)));
-	background: #aaaaaa -moz-linear-gradient(top, rgba(0, 0, 0, 0.25),
+	background: #2830EB -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.85)), to(rgba(0, 0, 0, 0)));
+	background: #2830EB -moz-linear-gradient(top, rgba(0, 0, 0, 0.85),
 		rgba(0, 0, 0, 0));
 	color: #ffffff;
 	text-shadow: 1px 1px 1px #333333;
@@ -68,6 +82,8 @@
 }
 
 .loganGrand {
+	background: none repeat scroll 0 0 transparent;
+    color: #5C3131;
 	float: left;
 	margin-top: 30px;
 	font-size: 30px;
@@ -191,6 +207,8 @@
 	cursor: auto;
 	padding-top: 5px;
 	padding-bottom: 5px;
+	padding-left: 5px;
+	    width:100%;
 }
 
 .Menu li ul {
@@ -228,6 +246,7 @@
 	background: none repeat scroll 0 0 #ffffff;
 	width: 100%;
 	height: 29px;
+	min-width: 920px;
 }
 
 .divBrancaBotton {
@@ -343,10 +362,8 @@
 	position: relative;
 	background-size: cover;
 	height: 100%;
-}
-
-legend {
-	font-weight: bold;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 fieldset {
@@ -356,6 +373,8 @@ fieldset {
 	border-left-width: 1px;
 	border-right-width: 1px;
 	border-radius: 10px 10px 10px 10px;
+	width:90%;
+	margin:auto;;
 }
 
 body.dark {
@@ -403,5 +422,4 @@ body.dark {
 	margin: auto;
 	min-width: 860px;
 	font: 76.5% "Arial", "Helvetica", sans-serif;
-	/*   font-family: Arial,Helvetica,sans-serif ; */
 }
