Grid e botoes Azul

--- a/GrandeViaFitness/src/main/webapp/common/css/myCss.css
+++ b/GrandeViaFitness/src/main/webapp/common/css/myCss.css
@@ -5,6 +5,27 @@
 	color: rgb(0, 0, 0);
 }
 
+.tam5{
+	width: 5%;
+}
+.tam10{
+	width: 10%;
+}
+.tam20{
+	width: 20%;
+}
+.tam30{
+	width: 30%;
+}
+.tam40{
+	width: 40%;
+}
+.tam50{
+	width: 50%;
+}
+.tam60{
+	width: 60%;
+}
 
 
 
