--- a/GrandeViaFitness/src/main/webapp/common/css/myCss.css
+++ b/GrandeViaFitness/src/main/webapp/common/css/myCss.css
@@ -19,7 +19,7 @@ input[disabled],select[disabled],textarea[disabled],input[readonly],select[reado
 }
 
 label{
-	font-family:  cursive;
+	font-family:  inherit;
 }
 .labelVisualiar {
 	font-family: Arial, Helvetica, sans-serif;
