--- a/GrandeViaFitness/src/main/webapp/common/MobileBlue/GrandeViaFitnessBlue.css
+++ b/GrandeViaFitness/src/main/webapp/common/MobileBlue/GrandeViaFitnessBlue.css
@@ -98,7 +98,8 @@ label.ui-btn {
 /* Flipswitch */
 .ui-flipswitch.ui-corner-all,
 /* Count bubble */
-.ui-li-count {
+.ui-li-count,
+.ui-li-count1 {
 	-webkit-border-radius: .3125em /*{global-radii-buttons}*/;
 	border-radius: .3125em /*{global-radii-buttons}*/;
 }
