--- a/GrandeViaFitness/src/main/webapp/common/css/myCss.css
+++ b/GrandeViaFitness/src/main/webapp/common/css/myCss.css
@@ -105,7 +105,7 @@ th .tam5 {
 
 .legenda {
 	background: none repeat scroll 0 0 transparent;
-	color: #939393;
+	color: #0073ea;
 	font-size: 16px;
 	font-weight: bolder;
 	margin-left: -1px;
