--- a/GrandeViaFitness/src/main/webapp/common/MobileBlue/GrandeViaFitnessBlue.css
+++ b/GrandeViaFitness/src/main/webapp/common/MobileBlue/GrandeViaFitnessBlue.css
@@ -239,9 +239,9 @@ html body .ui-group-theme-a .ui-bar-inherit {
 .ui-overlay-a,
 .ui-page-theme-a,
 .ui-page-theme-a .ui-panel-wrapper {
-	background-color: #000000 /*{a-page-background-color}*/;
+	background-color: #ffffff /*{a-page-background-color}*/;
 	border-color: #000000 /*{a-page-border}*/;
-	color: #ffffff /*{a-page-color}*/;
+	color: #000000 /*{a-page-color}*/;
 	text-shadow: 0 /*{a-page-shadow-x}*/ 1px /*{a-page-shadow-y}*/ 0 /*{a-page-shadow-radius}*/ #444444 /*{a-page-shadow-color}*/;
 }
 /* Body: Read-only lists, text inputs, collapsible content */
